--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.19.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^4.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {},
